Fix - slider caption on mobile

--- a/assets/sass/responsive/_small.scss
+++ b/assets/sass/responsive/_small.scss
@@ -41,8 +41,8 @@
 			}
 
 			.btn {
+				padding: 10px 15px;
 				font-size: 10px;
-				padding: 10px;
 			}
 		}
 	}
